fixed section 2 spacing

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ html {
 /* Section 2 */
 .section-2 {
   width: 100%;
-  height: 120%;
+  height: 120vh;
   padding: 10vh 0;
   display: flex;
   flex-direction: column;
